--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <h2>About our computers</h2>
           <p>This poweerful computer is perfect for work, study, or entertainment, plenty of storage, and a sleek modern disgn></p>
           <p>Ready to use right away, it's a great choice for sudents, professional, or anyone needing a for everyday task.</p>
-          <img src="/img/images (1).jpg" alt="">
-          <img src="/img/images (2).jpg" alt="">
-          <img src="/img/images (3).jpg" alt="">
-          <img src="/img/images (3).jpg" alt="">
-          <img src="/img/images.jpg" alt="">
+          <img src="images (1).jpg" alt="">
+          <img src="images (2).jpg" alt="">
+          <img src="images (3).jpg" alt="">
+          <img src="images (3).jpg" alt="">
+          <img src="images.jpg" alt="">
         </div>
 
     </section>
@@ -45,7 +45,7 @@
                 <li>Modern, sleek desing to fit any space</li>
             </ul>
             <div>
-                <img src="/img/images (1).jpg" alt="">
+                <img src="images (1).jpg" alt="">
             </div>
         </div>
     </section>
