--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
+    
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Cam-Travling"/>
+    <meta name="description"
+        content="Travleing to cambodia, there are a lot of places to visit">
+    <meta name="author" content="Many Sin">
+    <meta http-equiv="refresh" content="30">
+    <meta property="og:title" content="Cam-Travling">
+    <meta property="og:type" content="Traveling">
+    <meta name="keywords" content="">
+    <meta property="og:image" content="./images/image-03">
+    <meta property="og:site_name" content="SourceForge">
+    <meta property="og:description"
+        content="ITC Professional Training Center is a center that train students in IT field. We provided many course for studetns to choose their career path.">
+
+    <link rel="shortcut icon" href="./images/ITC.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header> 
