--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Cam-Travling">
     <meta property="og:type" content="Traveling">
     <meta name="keywords" content="">
-    <meta property="og:image" content="./images/image-03">
+    <meta property="og:image" content="./images.jpg">
     <meta property="og:site_name" content="SourceForge">
     <meta property="og:description"
         content="ITC Professional Training Center is a center that train students in IT field. We provided many course for studetns to choose their career path.">
